--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,11 +33,26 @@ body {
     width: 250px;
     outline: 2px #000;
     transition: box-shadow 0.5s ease-out;
+    border: 1px solid #333;
 }
 .form-msg-subject:focus,
 .form-msg-content:focus {
     outline: #000;
     box-shadow: 0px 0px 10px 0px #333;
+}
+.form-msg-subject:focus {
+    z-index: 5;
+}
+
+.form-msg-subject {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom: 0.5px solid #333;
+}
+.form-msg-content {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top: 0.5px solid #333;
 }
 
 textarea {
@@ -67,13 +82,13 @@ textarea {
 }
 
 .msg-subject-container {
-    padding: 5px;
+    margin: 5px;
 }
 .msg-subject-container:first-child {
-    padding-top: 0px;
+    margin-top: 0px;
 }
 .msg-subject-container:last-child {
-    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 .msg-subject {
@@ -104,6 +119,8 @@ textarea {
     background-color: #9DB4C0;
     padding: 15px 30px;
     border-radius: 4px;
+    border: 1px solid #333;
+    transition: opacity 0.4s ease-out;
 }
 .home-button:hover {
     cursor: pointer;
