--- a/views/messages/msg.pug
+++ b/views/messages/msg.pug
@@ -2,9 +2,9 @@ doctype html
 html
     head
         link(rel="stylesheet" href="/css/styles.css")
+        script(src="/js/scripts.js")
 
-
-    body
+    body(onload="easterEgg()")
         a(class="home-link" href="/")
             button(class="home-button") Return Home
 
