--- a/views/messages/not-found.pug
+++ b/views/messages/not-found.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         link(rel="stylesheet" href="/css/styles.css")
-
+        script(src="/js/scripts.js")
 
     body
         a(class="home-link" href="/")
